--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "express": "^4"
   },
   "devDependencies": {
+    "@cap-js/cds-types": "^0.9.0",
     "@cap-js/sqlite": "^1",
-    "@cap-js/cds-types": "^0.9.0"
+    "@sap/ux-ui5-tooling": "^1.16.5"
   },
   "scripts": {
-    "start": "cds-serve"
-  }
+    "start": "cds-serve",
+    "watch-galactic_spacefarer_adventures": "cds watch --open galactic_spacefarer_adventures/webapp/index.html?sap-ui-xx-viewCache=false"
+  },
+  "sapux": [
+    "app/galactic_spacefarer_adventures"
+  ]
 }
