--- a/app/galactic_spacefarer_adventures/ui5.yaml
+++ b/app/galactic_spacefarer_adventures/ui5.yaml
@@ -9,7 +9,7 @@ server:
     - name: fiori-tools-proxy
       afterMiddleware: compression
       configuration:
-        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
+        ignoreCertError: false
         ui5:
           path:
             - /resources
@@ -21,3 +21,15 @@ server:
         port: 35729
         path: webapp
         delay: 300
+    - name: fiori-tools-servestatic
+      afterMiddleware: compression
+      configuration:
+        paths:
+          - path: /annotations
+            src: annotations
+    - name: fiori-tools-proxy
+      afterMiddleware: compression
+      configuration:
+        backend:
+          - path: /odata/v4/spacefarer
+            url: http://localhost:4004
