--- a/app/galactic_spacefarer_adventures/package.json
+++ b/app/galactic_spacefarer_adventures/package.json
@@ -14,6 +14,7 @@
     "@sap/ux-ui5-tooling": "1"
   },
   "scripts": {
+    "start": "ui5 serve -o test/flpSandbox.html",
     "deploy-config": "npx -p @sap/ux-ui5-tooling fiori add deploy-config cf"
   }
 }
