Correcting dropdowns and preparing for CloudFoundry deployment

--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -4,3 +4,9 @@ position=Position
 
 #XFLD,120: Label for a field
 department=Department
+
+#XFLD,30
+Spacefarer=Spacefarer
+
+#XFLD,33
+Spacefarers=Spacefarers
