--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^8",
+    "@sap/xsenv": "^5.5.0",
+    "@sap/xssec": "^4.4.0",
+    "dotenv": "^16.4.7",
     "express": "^4",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
@@ -18,14 +22,6 @@
   "scripts": {
     "start": "cds-serve",
     "watch-galactic_spacefarer_adventures": "cds watch --open galactic_spacefarer_adventures/webapp/index.html?sap-ui-xx-viewCache=false"
-  },
-  "cds": {
-    "query": {
-      "limit": {
-        "default": 10,
-        "max": 20
-      }
-    }
   },
   "sapux": [
     "app/galactic_spacefarer_adventures"
